--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  
+  workflow_dispatch:
 
 jobs:
   build:
@@ -27,5 +29,5 @@ jobs:
           cache: "npm"
       - name: Execute Unit tests
       - run: npm ci
-	      - run: npm run test
+      	- run: npm run test
   
