--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,12 @@
 name: Runs All Unit tests
 
 on:
+  workflow_dispatch:
+
   push:
     branches: [main]
   pull_request:
     branches: [main]
-  
-  workflow_dispatch:
 
 jobs:
   build:
@@ -27,7 +27,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - name: Execute Unit tests
-      - run: npm ci
-      - run: npm run test
+      - name: Install dependencies
+        run: npm ci
+      - name: run test
+        run: npm run test
   
