--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "tsx src/infra/http/express/index.ts",
+    "dev": "tsx watch src/infra/http/express/index.ts",
     "test": "vitest"
   },
   "author": "Guilherme Figueiredo Terenciani",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/node": "^20.4.1",
     "axios": "^1.4.0",
     "tsx": "^3.12.7",
     "vitest": "^0.31.1"
